@@ -7,8 +7,11 @@
 
 package com.newrelic.agent.environment;
 
+import java.util.List;
+import java.util.ArrayList;
 import java.util.concurrent.atomic.AtomicInteger;
 
+import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -18,6 +21,13 @@ import com.newrelic.agent.config.AgentConfigFactory;
 import com.newrelic.agent.config.AgentConfigImpl;
 
 public class EnvironmentTest {
+
+    @After
+    public void clearObfuscateJvmPropsSettings() {
+        System.clearProperty("newrelic.config.obfuscate_jvm_props.enabled");
+        System.clearProperty("newrelic.config.obfuscate_jvm_props.allow");
+        System.clearProperty("newrelic.config.obfuscate_jvm_props.block");
+    }
 
     @Test
     public void overrideServerPort() throws Exception {
@@ -124,5 +134,126 @@ public class EnvironmentTest {
         } finally {
             System.clearProperty(property);
         }
+    }
+
+    //bunch of jvm props tests
+
+    @Test
+    public void obfuscateJvmProps_obfuscatesByDefault() {
+        List<String> props = exampleJvmProps();
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+        //nothing has been configured, all values should be obfuscated
+        Assert.assertEquals(props.size(), obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.A=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B.extended=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.C=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-javaagent:1234562"));
+    }
+
+    @Test
+    public void obfuscateJvmProps_doesNotObfuscateWhenDisabled() {
+        System.setProperty("newrelic.config.obfuscate_jvm_props.enabled", "false");
+        List<String> props = exampleJvmProps();
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+
+        Assert.assertEquals(props.size(), obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.A=one"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B=two"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B.extended=three"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.C=four"));
+        Assert.assertTrue(obfuscatedProps.contains("-javaagent:1234562"));
+    }
+
+    @Test
+    public void obfuscateJvmProps_doesNotTouchAgentFlag() {
+        //the current implementation does not modify the -javaagent prop.
+        //if the implementation changes we want to make sure the agent flag is still sent unmodified!
+        List<String> props = new ArrayList<>();
+        props.add("-javaagent:1234562abcdefg");
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+        Assert.assertEquals(props.size(), obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-javaagent:1234562abcdefg"));
+    }
+
+    @Test
+    public void obfuscateJvmProps_doesNotTouchXPrefixes_unlessOverridden() {
+        //we should leave -X and -XX alone even if they have equals signs unless overridden via configuration
+        System.setProperty("newrelic.config.obfuscate_jvm_props.block", "-XX:MaxNewSize");
+        List<String> props = new ArrayList<>();
+        props.add("-XX:MaxNewSize=256m");
+        props.add("-XX:MaxPermSize=128m");
+        props.add("-Xsomething=234");
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+
+        Assert.assertEquals(3, obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-XX:MaxNewSize=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-XX:MaxPermSize=128m"));
+        Assert.assertTrue(obfuscatedProps.contains("-Xsomething=234"));
+
+    }
+
+    @Test
+    public void obfuscateJvmProps_allowAndBlock() {
+        System.setProperty("newrelic.config.obfuscate_jvm_props.allow", "-Dprop.A, -Dprop.B*");
+        List<String> props = exampleJvmProps();
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+
+        Assert.assertEquals(props.size(), obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.A=one"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B=two"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B.extended=three"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.C=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-javaagent:1234562"));
+    }
+
+    @Test
+    public void obfuscateJvmProps_specificityAlwaysWins() {
+        //when there is overlap, the more specific rule should always apply
+        //so propA.extended and propB.extended rules apply regardless of which list they belong to
+        System.setProperty("newrelic.config.obfuscate_jvm_props.allow", "-Dprop.A.extended, -Dprop.B*");
+        System.setProperty("newrelic.config.obfuscate_jvm_props.block", "-Dprop.A*, -Dprop.B.extended");
+        List<String> props = exampleJvmProps();
+        props.add("-Dprop.A.extended=six");
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+
+        Assert.assertEquals(props.size(), obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.A=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.A.extended=six"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B=two"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B.extended=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.C=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-javaagent:1234562"));
+    }
+
+    @Test
+    public void obfuscateJvmProps_blockWins() {
+        System.setProperty("newrelic.config.obfuscate_jvm_props.allow", "-Dprop.A, -Dprop.B*");
+        System.setProperty("newrelic.config.obfuscate_jvm_props.block", "-Dprop.A");
+        List<String> props = exampleJvmProps();
+        List<String> obfuscatedProps = getObfuscatedProps(props);
+
+        Assert.assertEquals(props.size(), obfuscatedProps.size());
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.A=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B=two"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.B.extended=three"));
+        Assert.assertTrue(obfuscatedProps.contains("-Dprop.C=obfuscated"));
+        Assert.assertTrue(obfuscatedProps.contains("-javaagent:1234562"));
+    }
+
+    private List<String> exampleJvmProps() {
+        List<String> props = new ArrayList<>();
+        props.add("-Dprop.A=one");
+        props.add("-Dprop.B=two");
+        props.add("-Dprop.B.extended=three");
+        props.add("-Dprop.C=four");
+        props.add("-javaagent:1234562");
+        return props;
+    }
+
+    private List<String> getObfuscatedProps(List<String> props) {
+        AgentConfig config = AgentConfigFactory.createAgentConfig(null, null, null);
+        Environment env = new Environment(config, "c:\\test\\log");
+        return env.obfuscateProps(props, config.getObfuscateJvmPropsConfig());
     }
 }
